[package]
name = "canaveral"
version = "0.1.0"
authors = ["Michael Nussbaum <michaelnussbaum08@gmail.com"]


[dependencies.gtk]
version = "^0.5.0"
features = ["v3_10"]

[dependencies.gio]
version = "^0.5.0"
features = ["v2_44"]

[dependencies.glib]
version = "^0.6.0"
features = ["v2_44"]

[dependencies]
relm = "^0.15.2"
relm-derive = "^0.15.2"
relm-attributes = "^0.15.2"

[features]
default = ["relm/unstable", "relm-attributes/unstable", "relm-derive/unstable"]
